--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/sharmaineb/ent-1.1-landing-page/",
+  "homepage": "https://sharmaineb.github.io/ent-1.1-landing-page/",
   "name": "coffee-shop",
   "version": "0.1.0",
   "private": true,
